Typo: replace the text occured by occurred

--- a/i18n/uovdclient/ar.po
+++ b/i18n/uovdclient/ar.po
@@ -207,7 +207,7 @@ msgstr "النظام في حالة صيانة. يرجى اﻹتصال بمدير
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "وقع خطأ داخلي. يرجى اﻹتصال بمدير النظام"
 
 #: ../../client/web/web/translate.php:125
@@ -283,7 +283,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "لا تغلق نافذة Ulteo OVD هذه!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "وقع خطأ، يرجى اﻹتصال بمدير النظام"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -511,7 +511,7 @@ msgid "Text file (*.txt)"
 msgstr "ملف نصي (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "وقع خطأ. يرجى إعادة المحاولة مرة أخرى."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
