--- a/i18n/uovdclient/de.po
+++ b/i18n/uovdclient/de.po
@@ -217,7 +217,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr ""
 "Ein interner Fehler ist aufgetreten, bitte kontaktieren sie ihren "
 "Systemadministrator"
@@ -301,7 +301,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Dieses Ulteo OVD Fenster nicht schließen!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr ""
 "Ein Fehler ist aufgetreten, bitte kontaktieren sie ihren Systemadministrator"
 
@@ -532,7 +532,7 @@ msgid "Text file (*.txt)"
 msgstr "Textdatei (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Es ist ein Fehler aufgetreten. Bitte versuchen sie es noch einmal."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
