--- a/i18n/uovdclient/fr.po
+++ b/i18n/uovdclient/fr.po
@@ -223,7 +223,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr ""
 "Une erreur interne est survenue, veuillez contacter votre administrateur"
 
@@ -307,7 +307,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Ne fermez pas cette fenêtre Ulteo OVD !"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "Une erreur est apparue, veuillez contacter votre administrateur"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -553,7 +553,7 @@ msgid "Text file (*.txt)"
 msgstr "Fichier texte (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Une erreur est apparue. Veuillez recommencer."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
