--- a/i18n/uovdclient/he.po
+++ b/i18n/uovdclient/he.po
@@ -202,7 +202,7 @@ msgstr "המערכת נמצאת בתהליך תחזוקה, אנא צור קשר 
 
 #: ../../client/web/web/translate.php:126
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:471
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "חלה שגיאה פנימית, יש ליצור קשר עם מנהל המערכת"
 
 #: ../../client/web/web/translate.php:127
@@ -298,7 +298,7 @@ msgid "Disconnect"
 msgstr "התנתק"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:481
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "חלה שגיאה, יש ליצור קשר עם מנהל המערכת"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:647
@@ -468,7 +468,7 @@ msgid "Text file (*.txt)"
 msgstr "קובץ טקסט (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "אירוע שגיאה. אנה נסה שוב"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
