--- a/i18n/uovdclient/ja.po
+++ b/i18n/uovdclient/ja.po
@@ -206,7 +206,7 @@ msgstr "システムはメンテナンスモードです。詳細情報を得る
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "内部エラーが発生しています。管理者へ連絡してください"
 
 #: ../../client/web/web/translate.php:125
@@ -282,7 +282,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "このUlteo OVD ウィンドウを閉じてはいけません！"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "エラー発生しています。管理者へ連絡してください。"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -512,7 +512,7 @@ msgid "Text file (*.txt)"
 msgstr "テキストファイル (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "エラーが存在します。もう一度、やり直してください。"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
