--- a/i18n/uovdclient/nb.po
+++ b/i18n/uovdclient/nb.po
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "En intern feil har inntruffet, vennligst kontakt administrator"
 
 #: ../../client/web/web/translate.php:125
@@ -292,7 +292,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Ikke lukk dette Ulteo OVD vinduet!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "En feil har inntruffet, vennligst kontakt administrator"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -520,7 +520,7 @@ msgid "Text file (*.txt)"
 msgstr "Tekst fil (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "En feil oppstod. Vennligst prøv igjen."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
