--- a/i18n/uovdclient/nl.po
+++ b/i18n/uovdclient/nl.po
@@ -213,7 +213,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr ""
 "Er is een interne fout opgetreden, neem contact op met uw systeem beheerder!"
 
@@ -292,7 +292,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Dit window niet afsluiten!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr ""
 "Er is een interne fout opgetreden, neem contact op met uw systeem beheerder!"
 
@@ -522,7 +522,7 @@ msgid "Text file (*.txt)"
 msgstr "Tekstbestand (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Er is een fout opgetreden. Probeer het opnieuw."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
