--- a/i18n/uovdclient/ro.po
+++ b/i18n/uovdclient/ro.po
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "S-a produs o eroare internă, contactați-vă administratorul"
 
 #: ../../client/web/web/translate.php:125
@@ -291,7 +291,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Nu închideți această fereastră Ulteo OVD!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "S-a produs o eroare, contactați-vă administratorul"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -517,7 +517,7 @@ msgid "Text file (*.txt)"
 msgstr "Fișier text (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "S-a produs o eroare. Încercați din nou."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
