--- a/i18n/uovdclient/el.po
+++ b/i18n/uovdclient/el.po
@@ -223,7 +223,7 @@ msgstr ""
 # Προέκυψε
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr ""
 "Συνέβη ένα εσωτερικό σφάλμα, παρακαλώ επικοινωνήστε με το διαχειριστή σας"
 
@@ -307,7 +307,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Μην κλείσετε αυτό το Ulteo OVD παράθυρο!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "Προέκυψε σφάλμα, παρακαλώ επικοινωνήστε με τον διαχειριστή"
 
 # Προσοχή!;;;;;;;;
@@ -543,7 +543,7 @@ msgid "Text file (*.txt)"
 msgstr "Αρχείο κειμένου (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Προέκυψε σφάλμα. Παρακαλώ προσπαθήστε ξανά."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
