--- a/i18n/uovdclient/id.po
+++ b/i18n/uovdclient/id.po
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "Terjadi kesalahan internal, silakan hubungi administrator Anda"
 
 #: ../../client/web/web/translate.php:125
@@ -291,7 +291,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Jangan tutup window Ulteo OVD ini!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "Terjadi kesalahan, silahkan hubungi admnistrator Anda"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -517,7 +517,7 @@ msgid "Text file (*.txt)"
 msgstr "Teks file (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Terjadi kesalahan. Silahkan ulangi lagi."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
