--- a/i18n/uovdclient/is.po
+++ b/i18n/uovdclient/is.po
@@ -210,7 +210,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:126
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:471
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "Innri villa kom upp, vinsamlegast hafðu samband við kerfisstjóra þinn"
 
 #: ../../client/web/web/translate.php:127
@@ -312,7 +312,7 @@ msgid "Disconnect"
 msgstr "Aftengjast"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:481
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "Villa kom upp, vinsamlegast hafðu samband við kerfisstjórann þinn"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:647
@@ -482,7 +482,7 @@ msgid "Text file (*.txt)"
 msgstr "Textaskrá (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Villa kom upp. Vinsamlegast reyndu aftur."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
