--- a/i18n/uovdclient/it.po
+++ b/i18n/uovdclient/it.po
@@ -218,7 +218,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "E' avvenuto un errore interno, contattare l'amministratore"
 
 #: ../../client/web/web/translate.php:125
@@ -298,7 +298,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Non chiudere questa finestra di Ulteo OVD!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "E' avvenuto un errore, contattare l'amministratore"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -546,7 +546,7 @@ msgid "Text file (*.txt)"
 msgstr "File di testo (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "E' avvenuto un errore. Provare nuovamente."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
