--- a/i18n/uovdclient/pt_BR.po
+++ b/i18n/uovdclient/pt_BR.po
@@ -217,7 +217,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "Ocorreu um erro interno, entre em contato com o administrador"
 
 #: ../../client/web/web/translate.php:125
@@ -299,7 +299,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Não feche esta janela Ulteo OVD!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "Ocorreu um erro, contate o administrador"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -535,7 +535,7 @@ msgid "Text file (*.txt)"
 msgstr "Arquivo texto(*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Ocorreu um erro. Favor tentar novamente."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
