--- a/i18n/uovdclient/sk.po
+++ b/i18n/uovdclient/sk.po
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../../client/web/web/translate.php:124
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:380
-msgid "An internal error occured, please contact your administrator"
+msgid "An internal error occurred, please contact your administrator"
 msgstr "Vyskytla sa interná chyba, kontaktujte prosím Vášho administrátora."
 
 #: ../../client/web/web/translate.php:125
@@ -290,7 +290,7 @@ msgid "Do not close this Ulteo OVD window!"
 msgstr "Nezatvárajte toto ulteo okno!"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:390
-msgid "An error occured, please contact your administrator"
+msgid "An error occurred, please contact your administrator"
 msgstr "Vyskytla sa chyba, kontaktujte prosím Vášho administrátora"
 
 #: ../../client/java/src/org/ulteo/ovd/client/NativeClient.java:543
@@ -516,7 +516,7 @@ msgid "Text file (*.txt)"
 msgstr "Textový súbor (*.txt)"
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:92
-msgid "An error occured. Please try again."
+msgid "An error occurred. Please try again."
 msgstr "Vyskytla sa chyba. Skúste znova."
 
 #: ../../client/java/src/org/ulteo/ovd/client/bugreport/BugReporter.java:105
